finished raw content with minimalistic desing

--- a/static/style.css
+++ b/static/style.css
@@ -2,12 +2,8 @@
   color: #b9b9b9;
   font-size: 72px;
 }
-.section {
-  min-height: 100%;
-  padding-top: 50px;
-}
-.content {
-  height: 100%;
+body {
+  font-size: 20px;
 }
 .skill-list li {
   display: inline;
@@ -45,7 +41,6 @@
   margin: auto;
   max-width: 800px;
   text-align: justify;
-  font-size: 20px;
   margin-top: 50px;
   padding: 40px;
 }
