--- a/static/style.less
+++ b/static/style.less
@@ -3,8 +3,8 @@
   font-size: 72px;
 }
 
-.image {
-
+body {
+  font-size: 20px;
 }
 
 .name {
@@ -14,14 +14,14 @@
 
  }
 
-.section {
-  min-height: 100%;
-  padding-top: 50px;
-}
+//.section {
+//  min-height: 100%;
+//  padding-top: 50px;
+//}
 
-.content {
-  height: 100%;
-}
+//.content {
+//  height: 100%;
+//}
 
 .skill-list {
   li {
@@ -72,7 +72,6 @@
   margin: auto;
   max-width: 800px;
   text-align: justify;
-  font-size: 20px;
   margin-top: 50px;
   padding: 40px;
 }
