--- a/static/style.less
+++ b/static/style.less
@@ -1,77 +1,195 @@
-.story-text-big {
-  color: rgba(185, 185, 185, 1);
-  font-size: 72px;
+@black-color:        #383131;
+@grey-color:  darken(@black-color, 50%);
+@light-grey-color:  #e9e9e9;
+@bg-color: #fdfdfd;
+
+@blueA: #4cb7ef;
+@blueB: #28556c;
+@redA: #ce4753;
+@redB: #621119;
+@greyA: #b6b6b6;
+@greyB: #5a5959;
+@greenA: #78ab22;
+@greenB: #406500;
+
+//color1 = 50% vilagos
+
+@text-level-0: 88px;
+@text-level-1: 72px;
+@text-level-2: 30px;
+@text-level-3: 24px;
+
+@skill-title-3: 50px;
+@skill-title-2: 30px;
+@skill-title-1: 20px;
+
+.story-text {
+  text-align: right;
+  color: fade(@black-color, 30%);
+}
+
+.learn-about-me {
+  font-size: 140px;
+  padding-top: 120px;
+  line-height: 0.8;
+  padding-bottom: 25px;
+  .story-text()
+}
+
+.need-to-know {
+  line-height: 1.0;
+}
+
+.contact-me {
+  margin-top: 400px;
+  line-height: 0.8;
+}
+
+.worked-at {
+  line-height: 0.8;
+  margin-top: 80px;
 }
 
 body {
-  font-size: 20px;
+  font-family: 'Didact Gothic', sans-serif;
+  background-color: @bg-color;
+  color: @black-color;
+}
+
+.name {
+  font-size: @text-level-1;
+  font-weight: bolder;
+}
+
+.intro {
+  font-size: @text-level-3;
+  font-weight: bold;
+  margin-top: 20px;
+}
+
+.basic-info {
+  font-size: @text-level-2;
+  font-weight: bold;
+  font-weight: bold;
+}
+
+.image-row {
+  margin-top: 45px;
+}
+
+.story-text-0 {
+  font-size: @text-level-0;
+  .story-text()
+}
+
+.story-text-1 {
+  font-size: @text-level-1;
+  .story-text()
+}
+
+.story-text-2 {
+  font-size: @text-level-2;
+  .story-text()
+}
+
+.story-text-3 {
+  font-size: 28px;
+  .story-text()
 }
 
 .name {
 
 }
- .location, .profession {
 
- }
+.image {
 
-//.section {
-//  min-height: 100%;
-//  padding-top: 50px;
-//}
+}
 
-//.content {
-//  height: 100%;
-//}
 
 .skill-list {
-  li {
+  span {
     display: inline;
     white-space: nowrap;
   }
 }
 
 .skills-level-3 {
-  li {
+  span {
     border: solid 1px;
-    padding: 15px;
-    font-size: 36px;
-    line-height: 90px;
+    font-size: @skill-title-3;
+    padding: 13px;
+    margin: 13px;
+    line-height: 2.3;
   }
 }
 
 .skills-level-2 {
-  li {
+  span {
     border: solid 1px;
-    padding: 10px;
-    font-size: 28px;
-    line-height: 65px;
+    font-size: @skill-title-2;
+    padding: 8px;
+    margin: 8px;
+    line-height: 2.3;
   }
 }
 
 .skills-level-1 {
-  li {
+  span {
     border: solid 1px;
+    font-size: @skill-title-1;
     padding: 5px;
-    font-size: 20px;
-    line-height: 65px;
+    margin: 5px;
+    line-height: 2.3;
   }
+}
+
+.master-skill-title {
+  .story-text();
+  font-size: @skill-title-3;
+}
+
+.exp-skill-title {
+  .story-text();
+  font-size: @skill-title-2;
+}
+
+.work-skill-title {
+  .story-text();
+  font-size: @skill-title-1;
 }
 
 .contact-item {
-  font-size: 36px;
-  text-align: center;
-  line-height: 75px;
+  font-size: @text-level-3;
+  font-weight: bold;
+  margin-top: 10px;
+  color: @black-color;
   a {
     text-decoration: none;
-    color: black;
-    margin-left: 10px;
+    color: @black-color;
+    padding-left: 10px;
   }
 }
 
-.intro {
-  margin: auto;
-  max-width: 800px;
-  text-align: justify;
-  margin-top: 50px;
-  padding: 40px;
+.job-section {
+  margin-top: 40px;
+}
+
+.job-header {
+  font-size: @text-level-2;
+}
+
+.job-description {
+  font-size: @text-level-3;
+}
+
+.job-title {
+  font-weight: bold;
+}
+
+.jobs {
+  margin-top: 150px;
+}
+
+.container {
+  margin-bottom: 200px;
 }
