--- a/static/style.less
+++ b/static/style.less
@@ -61,6 +61,10 @@ body {
   font-weight: bolder;
 }
 
+.image img {
+  width: 500px;
+}
+
 .intro {
   font-size: @text-level-3;
   font-weight: bold;
@@ -69,7 +73,6 @@ body {
 
 .basic-info {
   font-size: @text-level-2;
-  font-weight: bold;
   font-weight: bold;
 }
 
