--- a/static/style.css
+++ b/static/style.css
@@ -21,6 +21,9 @@
   line-height: 0.8;
   margin-top: 80px;
 }
+.schools {
+  line-height: 0.8;
+}
 body {
   font-family: 'Didact Gothic', sans-serif;
   background-color: #fdfdfd;
