--- a/static/style.less
+++ b/static/style.less
@@ -50,6 +50,10 @@
   margin-top: 80px;
 }
 
+.schools {
+  line-height: 0.8;
+}
+
 body {
   font-family: 'Didact Gothic', sans-serif;
   background-color: @bg-color;
