--- a/static/style.css
+++ b/static/style.css
@@ -24,6 +24,9 @@
 .schools {
   line-height: 0.8;
 }
+.language {
+  line-height: 0.8;
+}
 body {
   font-family: 'Didact Gothic', sans-serif;
   background-color: #fdfdfd;
@@ -136,4 +139,30 @@ body {
 }
 .container {
   margin-bottom: 200px;
+}
+.languages {
+  margin-top: 120px;
+}
+.language-name {
+  font-size: 30px;
+  font-weight: bold;
+  margin-top: 15px;
+}
+.language-bar {
+  margin-top: 5px;
+  font-size: 24px;
+  height: 40px;
+}
+.language-bar div {
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 120px;
+  margin-right: 30px;
+  display: inline-block;
+  text-align: center;
+  background-color: #e9e9e9;
+  height: 100%;
+}
+.language-bar .full {
+  background-color: rgba(56, 49, 49, 0.5);
 }
