--- a/static/style.less
+++ b/static/style.less
@@ -1,5 +1,5 @@
 @black-color:        #383131;
-@grey-color:  darken(@black-color, 50%);
+@grey-color:  fade(@black-color, 50%);
 @light-grey-color:  #e9e9e9;
 @bg-color: #fdfdfd;
 
@@ -51,6 +51,10 @@
 }
 
 .schools {
+  line-height: 0.8;
+}
+
+.language {
   line-height: 0.8;
 }
 
@@ -199,4 +203,35 @@ body {
 
 .container {
   margin-bottom: 200px;
+}
+
+
+.languages {
+  margin-top: 120px;
+}
+
+.language-name {
+  font-size: @text-level-2;
+  font-weight: bold;
+  margin-top: 15px;
+}
+
+.language-bar {
+  margin-top: 5px;
+  font-size: @text-level-3;
+  height: 40px;
+  div {
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 120px;
+    margin-right: 30px;
+    display: inline-block;
+    text-align: center;
+    background-color: @light-grey-color;
+    height: 100%;
+
+  }
+  .full {
+    background-color: @grey-color;
+  }
 }
