fix mobile view

--- a/static/style.less
+++ b/static/style.less
@@ -19,9 +19,9 @@
 @text-level-2: 30px;
 @text-level-3: 24px;
 
-@skill-title-3: 50px;
-@skill-title-2: 30px;
-@skill-title-1: 20px;
+@skill-title-3: 34px;
+@skill-title-2: 21px;
+@skill-title-1: 13px;
 
 .story-text {
   text-align: right;
@@ -37,7 +37,7 @@
 }
 
 .image {
-  margin: 80px 0 80px 0;
+  margin: 40px 0 40px 0;
 }
 
 .need-to-know {
@@ -53,6 +53,7 @@ body {
 .name {
   font-size: @text-level-1;
   font-weight: bolder;
+
 }
 
 .image img {
@@ -106,7 +107,7 @@ body {
   }
 }
 .skills-level-3 {
-  margin-top: 80px;
+  //margin-top: 80px;
   span {
     font-size: @skill-title-3;
     padding: 8px;
@@ -204,20 +205,23 @@ body {
 
 .language-bar {
   margin-top: 5px;
-  font-size: @text-level-3;
+  font-size: 20px;
   height: 40px;
+  color: @bg-color;
+  width: 380px;
   div {
     padding-left: 10px;
     padding-right: 10px;
-    width: 120px;
-    margin-right: 30px;
+    width: 22%;
     display: inline-block;
     text-align: center;
     background-color: @light-grey-color;
     height: 100%;
-
   }
   .full {
     background-color: @grey-color;
   }
 }
+
+//name: 46px
+//text: 30px
