--- a/static/style.css
+++ b/static/style.css
@@ -11,7 +11,7 @@
   color: rgba(56, 49, 49, 0.3);
 }
 .image {
-  margin: 80px 0 80px 0;
+  margin: 40px 0 40px 0;
 }
 .need-to-know {
   line-height: 1.0;
@@ -67,16 +67,13 @@ body {
   border: solid 1px;
   line-height: 2.3;
 }
-.skills-level-3 {
-  margin-top: 80px;
-}
 .skills-level-3 span {
-  font-size: 50px;
+  font-size: 34px;
   padding: 8px;
   margin: 8px;
 }
 .skills-level-2 span {
-  font-size: 30px;
+  font-size: 21px;
   padding: 5px;
   margin: 5px;
 }
@@ -84,26 +81,26 @@ body {
   margin-bottom: 80px;
 }
 .skills-level-1 span {
-  font-size: 20px;
+  font-size: 13px;
   padding: 3px;
   margin: 3px;
 }
 .skill-level-3-title {
   text-align: right;
   color: rgba(56, 49, 49, 0.3);
-  font-size: 50px;
+  font-size: 34px;
   padding-top: 21px;
 }
 .skill-level-2-title {
   text-align: right;
   color: rgba(56, 49, 49, 0.3);
-  font-size: 30px;
+  font-size: 21px;
   padding-top: 13px;
 }
 .skill-level-1-title {
   text-align: right;
   color: rgba(56, 49, 49, 0.3);
-  font-size: 20px;
+  font-size: 13px;
   padding-top: 8px;
 }
 .contacts {
@@ -151,14 +148,15 @@ body {
 }
 .language-bar {
   margin-top: 5px;
-  font-size: 24px;
+  font-size: 20px;
   height: 40px;
+  color: #fdfdfd;
+  width: 380px;
 }
 .language-bar div {
   padding-left: 10px;
   padding-right: 10px;
-  width: 120px;
-  margin-right: 30px;
+  width: 22%;
   display: inline-block;
   text-align: center;
   background-color: #e9e9e9;
