--- a/static/style.less
+++ b/static/style.less
@@ -205,10 +205,10 @@ body {
 
 .language-bar {
   margin-top: 5px;
-  font-size: 20px;
+  font-size: 18px;
   height: 40px;
   color: @bg-color;
-  width: 380px;
+  width: 100%;
   div {
     padding-left: 10px;
     padding-right: 10px;
