--- a/static/style.css
+++ b/static/style.css
@@ -154,6 +154,7 @@ body {
   width: 100%;
 }
 .language-bar div {
+  padding-top: 8px;
   padding-left: 10px;
   padding-right: 10px;
   width: 22%;
