--- a/static/style.less
+++ b/static/style.less
@@ -210,6 +210,7 @@ body {
   color: @bg-color;
   width: 100%;
   div {
+    padding-top: 8px;
     padding-left: 10px;
     padding-right: 10px;
     width: 22%;
