--- a/static/style.less
+++ b/static/style.less
@@ -159,7 +159,7 @@ body {
   font-size: @text-level-3;
   font-weight: bold;
   margin-top: 10px;
-  color: @grey-color;
+  color: @black-color;
   a {
     text-decoration: none;
     color: @black-color;
