fixing grammar things; add presentations

--- a/static/style.less
+++ b/static/style.less
@@ -50,6 +50,10 @@ body {
   color: @black-color;
 }
 
+a:active, a:hover, a:visited {
+  color: @black-color;
+}
+
 .name {
   font-size: 60px;
   font-weight: bolder;
@@ -173,6 +177,10 @@ body {
 
 .job-header {
   font-size: @text-level-2;
+  a {
+    text-decoration: none;
+    color: @black-color;
+  }
 }
 
 .job-description {
