--- a/static/style.css
+++ b/static/style.css
@@ -21,6 +21,11 @@ body {
   background-color: #fdfdfd;
   color: #383131;
 }
+a:active,
+a:hover,
+a:visited {
+  color: #383131;
+}
 .name {
   font-size: 60px;
   font-weight: bolder;
@@ -123,6 +128,10 @@ body {
 }
 .job-header {
   font-size: 30px;
+}
+.job-header a {
+  text-decoration: none;
+  color: #383131;
 }
 .job-description {
   font-size: 24px;
