--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,12 @@
 .story-text {
   text-align: right;
-  color: rgba(56, 49, 49, 0.3);
+  color: rgba(56, 49, 49, 0.3) !important;
+  -webkit-print-color-adjust: exact;
+}
+@media print {
+  .story-text {
+    page-break-inside: avoid;
+  }
 }
 .learn-about-me {
   font-size: 120px;
@@ -8,7 +14,8 @@
   line-height: 0.8;
   padding-bottom: 25px;
   text-align: right;
-  color: rgba(56, 49, 49, 0.3);
+  color: rgba(56, 49, 49, 0.3) !important;
+  -webkit-print-color-adjust: exact;
 }
 .image {
   margin: 40px 0 40px 0;
@@ -39,30 +46,39 @@ a:visited {
   margin-top: 40px;
   margin-bottom: 80px;
 }
+@media print {
+  .row {
+    page-break-inside: avoid;
+  }
+}
 .basic-info {
   font-size: 30px;
   font-weight: bold;
 }
 .story-text-0 {
   text-align: right;
-  color: rgba(56, 49, 49, 0.3);
+  color: rgba(56, 49, 49, 0.3) !important;
+  -webkit-print-color-adjust: exact;
   font-size: 88px;
   line-height: 0.8;
 }
 .story-text-1 {
   font-size: 60px;
   text-align: right;
-  color: rgba(56, 49, 49, 0.3);
+  color: rgba(56, 49, 49, 0.3) !important;
+  -webkit-print-color-adjust: exact;
 }
 .story-text-2 {
   font-size: 30px;
   text-align: right;
-  color: rgba(56, 49, 49, 0.3);
+  color: rgba(56, 49, 49, 0.3) !important;
+  -webkit-print-color-adjust: exact;
 }
 .story-text-3 {
   font-size: 28px;
   text-align: right;
-  color: rgba(56, 49, 49, 0.3);
+  color: rgba(56, 49, 49, 0.3) !important;
+  -webkit-print-color-adjust: exact;
 }
 .skill-list span {
   display: inline;
@@ -92,19 +108,22 @@ a:visited {
 }
 .skill-level-3-title {
   text-align: right;
-  color: rgba(56, 49, 49, 0.3);
+  color: rgba(56, 49, 49, 0.3) !important;
+  -webkit-print-color-adjust: exact;
   font-size: 34px;
   padding-top: 21px;
 }
 .skill-level-2-title {
   text-align: right;
-  color: rgba(56, 49, 49, 0.3);
+  color: rgba(56, 49, 49, 0.3) !important;
+  -webkit-print-color-adjust: exact;
   font-size: 21px;
   padding-top: 13px;
 }
 .skill-level-1-title {
   text-align: right;
-  color: rgba(56, 49, 49, 0.3);
+  color: rgba(56, 49, 49, 0.3) !important;
+  -webkit-print-color-adjust: exact;
   font-size: 13px;
   padding-top: 8px;
 }
@@ -123,8 +142,32 @@ a:visited {
   color: #383131;
   padding-left: 10px;
 }
+@media all {
+  .weburl {
+    display: none;
+  }
+}
+@media print {
+  .weburl {
+    display: block;
+    color: red !important;
+    -webkit-print-color-adjust: exact;
+  }
+  .weburl a {
+    color: red !important;
+    -webkit-print-color-adjust: exact;
+  }
+}
 .job {
   margin-top: 40px;
+}
+@media print {
+  .job {
+    page-break-inside: avoid;
+  }
+  .jobs-row {
+    page-break-inside: auto;
+  }
 }
 .job-header {
   font-size: 30px;
@@ -156,7 +199,8 @@ a:visited {
   margin-top: 5px;
   font-size: 18px;
   height: 40px;
-  color: #fdfdfd;
+  color: #fdfdfd !important;
+  -webkit-print-color-adjust: exact;
   width: 100%;
 }
 .language-bar div {
@@ -166,11 +210,13 @@ a:visited {
   width: 22%;
   display: inline-block;
   text-align: center;
-  background-color: #e9e9e9;
   height: 100%;
+  background-color: #e9e9e9 !important;
+  -webkit-print-color-adjust: exact;
 }
 .language-bar .full {
-  background-color: rgba(56, 49, 49, 0.5);
+  background-color: rgba(56, 49, 49, 0.3) !important;
+  -webkit-print-color-adjust: exact;
 }
 .activities {
   margin: 80px 0 80px 0;
@@ -187,4 +233,11 @@ a:visited {
   width: 48px;
   height: 48px;
   margin-right: 15px;
+}
+@media print {
+  @page {
+    size: A4;
+    margin-left: 0cm;
+    margin-right: 0cm;
+  }
 }
