--- a/static/style.less
+++ b/static/style.less
@@ -1,5 +1,5 @@
 @black-color:        #383131;
-@grey-color:  fade(@black-color, 50%);
+@grey-color:  fade(@black-color, 30%);
 @light-grey-color:  #e9e9e9;
 @bg-color: #fdfdfd;
 
@@ -12,8 +12,6 @@
 @greenA: #78ab22;
 @greenB: #406500;
 
-//color1 = 50% vilagos
-
 @text-level-0: 88px;
 @text-level-1: 60px;
 @text-level-2: 30px;
@@ -25,7 +23,14 @@
 
 .story-text {
   text-align: right;
-  color: fade(@black-color, 30%);
+  color: @grey-color !important;
+  -webkit-print-color-adjust: exact;
+}
+
+@media print {
+  .story-text {
+    page-break-inside: avoid;
+  }
 }
 
 .learn-about-me {
@@ -57,7 +62,6 @@ a:active, a:hover, a:visited {
 .name {
   font-size: @text-level-1;
   font-weight: bolder;
-
 }
 
 .image img {
@@ -69,6 +73,11 @@ a:active, a:hover, a:visited {
   font-weight: bold;
   margin-top: 40px;
   margin-bottom: 80px;
+}
+@media print {
+  .row {
+    page-break-inside: avoid;
+  }
 }
 
 .basic-info {
@@ -110,6 +119,7 @@ a:active, a:hover, a:visited {
     line-height: 2.3;
   }
 }
+
 .skills-level-3 {
   //margin-top: 80px;
   span {
@@ -170,9 +180,35 @@ a:active, a:hover, a:visited {
     padding-left: 10px;
   }
 }
+@media all {
+  .weburl {
+    display: none;
+  }
+}
+
+@media print {
+  .weburl {
+    display: block;
+    color: red !important;
+    -webkit-print-color-adjust: exact;
+    a {
+      color: red !important;
+      -webkit-print-color-adjust: exact;
+    }
+  }
+}
 
 .job {
   margin-top: 40px;
+}
+
+@media print {
+  .job {
+    page-break-inside: avoid;
+  }
+  .jobs-row {
+    page-break-inside: auto;
+  }
 }
 
 .job-header {
@@ -211,7 +247,8 @@ a:active, a:hover, a:visited {
   margin-top: 5px;
   font-size: 18px;
   height: 40px;
-  color: @bg-color;
+  color: @bg-color !important;
+  -webkit-print-color-adjust: exact;
   width: 100%;
   div {
     padding-top: 8px;
@@ -220,11 +257,13 @@ a:active, a:hover, a:visited {
     width: 22%;
     display: inline-block;
     text-align: center;
-    background-color: @light-grey-color;
     height: 100%;
+    background-color: @light-grey-color !important;
+    -webkit-print-color-adjust: exact;
   }
   .full {
-    background-color: @grey-color;
+    background-color: @grey-color !important;
+    -webkit-print-color-adjust: exact;
   }
 }
 
@@ -245,4 +284,12 @@ a:active, a:hover, a:visited {
   width: 48px;
   height: 48px;
   margin-right: 15px;
+}
+
+@media print {
+  @page {
+    size: A4;
+    margin-left: 0cm;
+    margin-right: 0cm;
+  }
 }
